fixed poemPocket grid overflow

--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -57,7 +57,7 @@
     grid-auto-flow: row;
     grid-auto-rows: 1fr;
     padding: 3%;
-    grid-gap: 1%;
+    grid-gap: .2%;
 }
 
 .pageHeader {
